Correction layout issues of slogan1 component

--- a/styles/components/_slogan1.scss
+++ b/styles/components/_slogan1.scss
@@ -7,11 +7,13 @@
 
     --site-slogan1-img-frame-grid-row: 2;
     --site-slogan1-img-border-radius: 10px;
+    --site-slogan1-img1-left-pos: 5%;
+    --site-slogan1-img3-4-right-pos: 5px;
     --site-slogan1-img1-width: 90%;
     --site-slogan1-img2-width: 20%;
     --site-slogan1-img3-width: 30%;
     --site-slogan1-img4-width: 20%;
-    --site-slogan1-img4-top-pos: -8%;
+    --site-slogan1-img4-top-pos: -15px;
 
     --site-slogan1-content-padding: 0;
     --site-slogan1-content-display: block;
@@ -21,11 +23,12 @@
     --site-slogan1-content-p-margin: 1rem;
     --site-slogan1-content-title-margin: 0.5rem;
 
-    --site-slogan1-content-list-flex-direction: column;
+    --site-slogan1-content-list-flex-direction: row;
     --site-slogan1-content-list-gap: 20px;
 
     --site-slogan1-cta-block-padding: 0;
     --site-slogan1-cta-block-direction: column;
+    --site-slogan1-cta-block-justify-content: center;
     --site-slogan1-cta-block-gap: 10px;
 }
 
@@ -40,57 +43,58 @@
             --site-slogan1-content-gap: 25px;
         }
         // @media (min-width: 1200px) and (max-width: (1400px - 1)) {
-        //     border: 10px solid violet;
         // }
         @media (min-width: 1200px) {
             --site-slogan1-content-display: flex;
             --site-slogan1-content-p-margin: 0;
             --site-slogan1-content-title-margin: 0;
-            --site-slogan1-grid-column-gap: 50px;
             --site-slogan1-content-padding: 0 0 40px 0;
             --site-slogan1-cta-block-padding: 30px 0 0 0;
-            --site-slogan1-content-list-gap: 60px;
             max-width: var(--site-slogan1-width);
         }
         @media (min-width: 992px) and (max-width: (1200px - 1)) {
-            // border: 10px solid lime;
             max-width: 870px;
-            --site-slogan1-content-list-gap: 60px;
             --site-slogan1-grid-column-gap: 50px;
         }
         @media (min-width: 992px) {
             --site-slogan1-grid-template: 1fr / 50% auto;
+            --site-slogan1-cta-block-justify-content: flex-start;
         }
         @media (min-width: 768px) and (max-width: (992px - 1)) {
-            // border: 10px solid blue;
-            --site-slogan1-content-list-gap: 60px;
             --site-slogan1-grid-template: 1fr / 40% auto;
-            --site-slogan1-img4-top-pos: 5%;
         }
         @media (min-width: 768px) {
-            --site-slogan1-content-list-flex-direction: row;
             --site-slogan1-img-frame-grid-row: 1/3;
+            --site-slogan1-content-list-gap: 80px;
+            --site-slogan1-grid-column-gap: 50px;
             // --site-slogan1-content-list-gap: 100px;
         }
         // @media (min-width: 576px) and (max-width: (768px - 1)) {
-        //     border: 10px solid turquoise;
         // }
-        // @media (max-width: (576px - 1px)) {
-        //     border: 10px solid chocolate;
-        // }
+        @media (min-width: 576px) {
+            --site-slogan1-content-list-gap: 60px;
+        }
+        @media (max-width: (576px - 1px)) {
+            --site-slogan1-content-list-gap: 50px;
+        }
+    }
+    .slogan1__img-frame,
+    .slogan1__img-frame-wrapper {
+        position: relative;
     }
     .slogan1__img-frame {
-        position: relative;
         display: flex;
         align-items: center;
         grid-row: var(--site-slogan1-img-frame-grid-row);
         img {
             border-radius: var(--site-slogan1-img-border-radius);
-            height: fit-content;
+            height: inherit;
             border: 1px solid var(--site-clr-text1);
             box-shadow: 2px 4px 8px 0px rgba(40, 26, 48, 0.70);
         }
         .slogan-img1 {
+            position: relative;
+            left: var(--site-slogan1-img1-left-pos);
             width: var(--site-slogan1-img1-width);
         }
         .slogan-img2, .slogan-img3, .slogan-img4 {
@@ -99,17 +103,17 @@
         .slogan-img2 {
             width: var(--site-slogan1-img2-width);
             top: 20%;
-            left: -8%;
+            left: -3px;
         }
         .slogan-img3 {
             width: var(--site-slogan1-img3-width);
-            bottom: 26%;
-            right: 3%;
+            right: var(--site-slogan1-img3-4-right-pos);
+            bottom: -10px;
         }
         .slogan-img4 {
             width: var(--site-slogan1-img4-width);
             top: var(--site-slogan1-img4-top-pos);
-            right: 15%;
+            right: var(--site-slogan1-img3-4-right-pos);
         }
     }
     .slogan1__content {
@@ -137,6 +141,7 @@
     .slogan1__cta-block {
         display: flex;
         flex-direction: var(--site-slogan1-cta-block-direction);
+        justify-content: var(--site-slogan1-cta-block-justify-content);
         gap: var(--site-slogan1-cta-block-gap);
         padding: var(--site-slogan1-content-padding);
 
